crates/nidus/tests/ui/guard_outside_route_method.rs
use nidus::prelude::*;

struct AuthGuard;

#[guard(AuthGuard)]
fn guarded() {}

fn main() {}
